--- a/frontend-angular/src/app/header/header.component.html
+++ b/frontend-angular/src/app/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <span fxHide.gt-xs>
+    <button class="menu-button" mat-icon-button aria-label="Menu Button" (click)="onToggleSidenav()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </span>
+  <span>
+    <a routerLink="/">{{ title }}</a>
+  </span>
+  <span class="toolbar-spacer"></span>
+  <span fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+    <span class="toolbar-spacer"></span>
+    <ul class="navigation-items" fxLayout fxLayoutGap="10px">
+      <li><a routerLink="/miniatures">Miniatures</a></li>
+      <li><a routerLink="/creators">Creators</a></li>
+    </ul>
+  </span>
+  <span class="toolbar-spacer"></span>
+  <span>
+    <button class="miniature-dialog m-3" mat-icon-button aria-label="Add new Miniature" (click)="openMiniatureDialog()">
+      <mat-icon class="add-miniature-icon" [inline]="false">note_add bold</mat-icon>
+    </button>
+  </span>
+</mat-toolbar>
