--- a/frontend-angular/src/app/content/miniatures/miniatures.component.html
+++ b/frontend-angular/src/app/content/miniatures/miniatures.component.html
@@ -1,1 +1,25 @@
-<p>miniatures works!</p>
+<div class="row justify-content-right">
+  <div class="col"></div>
+  <div class="col-md-auto mt-1">
+    <form class="input-group">
+      <span class="input-group-text">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+        </svg>
+      </span>
+      <input type="text" class="form-control" placeholder="Search..." aria-label="Search" aria-describedby="basic-addon1">
+    </form>
+  </div>
+</div>
+<div class="row m-1 justify-content-left">
+  <mat-card id="card" class="m-1" *ngFor="let miniature of miniatureList" (click)="openMiniatureEditDialog(miniature)">
+    <mat-card-header>
+      <img mat-card-avatar id="card-header-image" src="assets/images/no-image.png" alt="Image of {{ miniature.name }}">
+      <mat-card-title>{{ miniature.name }}</mat-card-title>
+      <mat-card-subtitle>Placeholder</mat-card-subtitle>
+    </mat-card-header>
+    <div>
+      <img mat-card-image src="assets/images/no-image.png" alt="{{ miniature.name }} Image">
+    </div>
+  </mat-card>
+</div>
